Ingress/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: kubernetes-dashboard
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: dashboard.com
    http:
      paths:
      - path: /
        pathType: Exact  
        backend:
          service:
            name: kubernetes-dashboard
            port: 
              number: 80 

---
#path based routing
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: kubernetes-dashboard
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: dashboard.com
    http:
      paths:
      - path: /analytics
        pathType: Exact  
        backend:
          service:
            name: analytics-service
            port: 
              number: 3000 
      - path: /shopping 
        pathtype: Exact 
        backend: 
          service: 
            name: shopping-service
            port: 
              number: 80

---
# multiple subdomians or domains  

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: kubernetes-dashboard
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: analytics.dashboard.com
    http:
      paths:
      - path: /
        pathType: Exact  
        backend:
          service:
            name: analytics-service
            port: 
              number: 3000  
  - host: shopping.dashboard.com
    http: 
      paths:
      - path: /
        pathtype: Exact 
        backend: 
          service: 
            name: shopping-service
            port: 
              number: 80
